--- a/Arc_Ai/Arc_Ai/core/static/styles/landingpage.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/landingpage.css
@@ -1,329 +1,391 @@
-body {
-    margin: 0;
-    font-family: 'Inter', sans-serif;
-    color: #333;
-    background-color: #fff;  padding-top: 80px; 
-  }
-
-  header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    box-sizing: border-box;
-    background-color: #353A56;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    z-index: 999;
-   
-  }
-
-  .logo {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    margin-left: 30px;
-  
-  }
-  
-  .arclogo {
-    width: 190px;
-    height: auto;
-    flex-shrink: 0;
-  }
-
-
-  
-  nav {
-    display: flex;
-    align-items: center;
-    gap: 35px;
-  }
-  
-  nav a {
-    text-decoration: none;
-    font-family: 'Inter', sans-serif;
-    font-size: 24px;
-    font-weight: 500;
-    line-height: 100%;
-    letter-spacing: 0%;
-    color: white;
-  }
-  
-  .Get-started {
-    margin-left: auto;
-    height: 32px;
-    width: 130px;
-    background-color: white;
-    color: #353A56;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-left: 25px;
-    font-size: 20px;
-    padding:5px;
-    font-weight: bold;
-  }
-/*------------------------------------------------------------------------------*/
-/*-------------------------------Hero Section----------------------------------*/ 
-  .hero-divider {
-    width: 90%;
-    height: 2px;
-    background-color: #353a56;
-    margin: 2rem 4rem 2rem 4rem;
-  }
-  
-  .hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    padding: 2rem;
-    margin: 2rem 2rem;
-  }
-
-  
-  .hero-content {
-    max-width: 600px;
-  }
-  
-  .hero h1 {
-    font-size: 60px;
-    margin-bottom: 1rem
-  }
-  
-  .brand {
-    color: #4b2aad;
-  }
-  
-  .subtitle {
-    font-weight: bold;
-    margin-bottom: 2rem;
-    font-size: 28px;
-  }
-  
-  .description {
-    font-size: 20px;
-    font-weight: 300;
-    margin-bottom: 2rem;
-    font-style: italic;
-  }
-
-  .signUp{
-    font-size: 20px;
-    font-weight: 300;
-    margin-bottom: 1.5rem;
-    margin-top: 3rem;
-    font-weight: bold;
-  }
-  
-  .signup-btn {
-    text-decoration: none;
-    font-size: 30px;
-    color: black;
-  }
-
-  .signup-btn:after{
-    content: "⟶";
-    margin-left: 10px;
-    font-weight: 200;
-  }
-  
-  .hero-image img {
-    max-width: 600px;
-    width: 100%;
-    height: auto;
-    margin-top: auto;
-  }
-  /*------------------------------------------------------------------------------*/
-  /*-------------------------------Features Section------------------------------*/
-  .features {
-    max-width: 1300px;
-    margin: 0 auto;
-    padding: 2rem;
-  }
-  
-  .features-intro {
-    text-align: center;
-    font-size: 46px;
-    margin-bottom: 2rem;
-    margin-top: 2rem;
-    font-style: italic;
-    font-weight: 300    ;
-  }
-  
-  .features-grid {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 0;
-    text-align: left;
-  }
-
-  .feature-box img{
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 1rem;
-  }
-  
-  .feature-box {
-    padding: 0 1.5rem;
-    border-left: 2px solid #353a56;
-    text-align: center;
-  }
-  
-  .feature-box:first-child {
-    border-left: none;
-  }
-  
-  .feature-box h3 {
-    font-size: 32px;
-    margin-bottom: 0.5rem;
-    font-weight: 700;
-  }
-  
-  .feature-box p {
-    font-size: 1rem;
-    font-weight: 300;
-  }
-  /*------------------------------------------------------------------------------*/
-  /*-------------------------------Institution Section----------------------------*/
-  .institution-section {
-    max-width: 1200px;
-    margin: 3rem auto;
-    padding: 2rem;
-  }
-  
-  .institution-title {
-    text-align: center;
-    font-size: 46px;
-    font-style: italic;
-    font-weight: 300;
-    margin-bottom: 7rem;
-  }
-  
-  .institution-grid {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    gap: 2rem;
-    align-items: start;
-    position: relative;
-  }
-  
-  .institution-left {
-    display: flex;
-    flex-direction: column;
-    justify-content: start;
-    border-right: 2px solid #353a56;
-    padding-right: 1rem;
-  }
-  
-  .institution-left h3 {
-    text-align: right;
-    margin: 2rem 0 5rem 0;
-    font-size: 30px;
-    font-weight: 700;
-  }
-  
-  .institution-right {
-    display: flex;
-    flex-direction: column;
-    gap: 5rem;
-    margin-left: 1rem
-  }
-  
-  .institution-right p {
-    margin: 0;
-    font-style: italic;
-    font-weight: 300;
-    font-size: 22px;
-    line-height: 1.6;
-  }
-/*------------------------------------------------------------------------------*/
-/*-------------------------------About Section----------------------------------*/
-  .about-arcai {
-    margin: 0rem 2rem 0rem 2rem;
-    padding: 3rem 2rem;
-    background-color: #fff;
-    font-family: 'Inter', sans-serif;
-  }
-  
-  .about-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 2rem;
-  }
-  
-  .about-text {
-    flex: 1 1 45%;
-    min-width: 280px;
-  }
-  
-  .about-text h2 {
-    font-size: 54px;
-    font-style: italic;
-    font-weight: 400;
-    margin-bottom: 1rem;
-  }
-  
-  .about-text p {
-    font-size: 22px;
-    font-style: italic;
-    font-weight: 300;
-    line-height: 1.6;
-    margin-bottom: 1rem;
-  }
-  
-  .submitted p{
-    font-weight: 700;
-    font-size: 20px;
-    font-style: normal;
-    margin-top: 2rem;
-  }
-  
-  .dev-grid {
-    flex: 1 1 45%;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 1.5rem;
-    justify-items: center;
-    align-items: center;
-    margin-top: 7rem;
-  }
-  
-  .dev-card {
-    text-align: center;
-  }
-  
-  .dev-card img {
-    width: 170px;
-    height: 170px;
-    object-fit: cover;
-    border-radius: 50%;
-    margin-bottom: 0.5rem;
-  }
-  
-  .dev-card p {
-    margin: 0;
-    font-size: 20px;
-  }
-  
-  .dev-card span {
-    font-weight: 300;
-  }
-
-  /* .wave-footer {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  line-height: 0;
-  margin:0;
+html {
+  scroll-behavior: smooth;
 }
 
-.wave-footer svg {
-  display: block;
+body {
+    margin: 0;
+    padding-top: 0;
+    font-family: 'Inter', sans-serif;
+    color: #333;
+    background-color: #ffffff; 
+  }
+
+#header {
+  height: 50px;
+  width: auto;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  padding-left: 138px;
+  padding-right: 138px;
+  align-items: center;
+  
+}
+
+#header img {
+  height: 45px;
+  width: auto;
+  margin-left: 20px;
+}
+
+#header_nav {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+  align-items: center;
+}
+
+#header_nav button a {
+  text-decoration: none;
+  color: #353A56;
+  font-size: 18px;
+}
+
+#header_nav button:hover a{
+  color: white;
+}
+
+#header_nav button{
+  background-color: #ffffff;
+  color: #353A56;
+  height: 40px;
+  width: 120px;
+  border-radius: 10px;
+  margin-left: 20px;
+  transition: background-color 0.3s ease;
+}
+
+#header_nav button:hover{
+  background-color: #353A56;
+  color: white;
+}
+
+#text {
+  display: flex;
+  align-items: center;
+  flex-direction: row;
+  gap: 20px;
+}
+#text a{
+  text-decoration: none;
+  font-size: 18px;
+  color: #353A56;
+  position: relative;
+}
+#text a::after {
+  content: '';
+  position: absolute;
+  left: 0;
+  bottom: -4px;
+  width: 0;
+  height: 2px;
+  background-color: #353A56;
+  transition: width 0.3s ease;
+}
+#text a:hover::after {
   width: 100%;
+}
+
+/* ================================================== */
+
+#sec1 {
+  height: 95vh;
+  width: auto;
+  background-color: #353A56;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+#sec1 img {
+  height: 30px;
+  width: 150px;
+}
+#arrow_down {
+  margin-bottom: 20px;
+}
+#sec1_text {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  gap: 20px;
+  margin-left: 138px;
+}
+#sec1_text h1 {
+  color: white;
+  font-size: 50px;
+}
+#sec1_text button a {
+  text-decoration: none;
+  color: #353A56;
+  font-size: 18px;
+}
+#sec1_text button {
+  background-color: #ffffff;
+  color: #353A56;
+  height: 50px;
+  width: 150px;
+  border-radius: 10px;
+  margin-left: 20px;
+  transition: background-color 0.3s ease;
+}
+
+#sec1_main {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 250px;
+  gap: 200px;
+}
+
+#sec1_img {
+  position: relative;
+  width: 350px;   /* Adjust as needed */
+  height: 200px;  /* Adjust as needed */
+  margin-top: 30px;
+  margin-right: 438px;
+}
+
+#sec1_img img {
+  position: absolute;
+  width: 120px;   /* Adjust as needed */
+  height: auto;
+  border-radius: 12px;
+  transition: transform 0.2s;
+}
+
+/* Messy layering effect */
+#sec1_img img:nth-child(1) {
+  left: 350px;
+  bottom: -10px;
+  transform: rotate(5deg);
+  height: 300px;
+  width: auto;
+  z-index: 4;
+}
+#sec1_img img:nth-child(2) {
+  left: 40px;
+  top: 0px;
+  transform: rotate(-4deg);
+  height: 300px;
+  width: auto;
+  z-index: 5;
+}
+#sec1_img img:nth-child(3) {
+  left: 80px;
+  bottom: 190px;
+  transform: rotate(-12deg);
+  height: 150px;
+  width: auto;
+  z-index: 1;
+}
+#sec1_img img:nth-child(4) {
+  right: 230px;
+  bottom: 180px;
+  transform: rotate(0deg);
   height: 100px;
-  margin:0;
-} */
+  width: auto;
+  z-index: 3;
+}
+#sec1_img img:nth-child(5) {
+  left: 450px;
+  bottom: 250px;
+  transform: rotate(-12deg);
+  z-index: 2;
+}
+#sec1_img img:nth-child(6) {
+  left: 350px;
+  top: 180px;
+  transform: rotate(3deg);
+  z-index: 6;
+}
+
+/* ================================================ */
+
+#sec2, #sec3{
+  height: 100vh;
+  width: auto;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#sec2_title h1 {
+  color: #353A56;
+  font-size: 50px;
+  margin-top: 100px;
+  text-align: center;
+}
+#sec2_title p {
+  color: #353A56;
+  text-align: center;
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: normal;
+
+}
+
+#sec2_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+  gap: 30px;
+  margin-bottom: 150px;
+}
+
+#sec2_container img {
+  width: 120px;
+  height: auto;
+}
+#sec2_container p {
+  color: #353A56;
+  font-size: 18px;
+  padding: 20px;
+  text-align: center;
+}
+
+.sec2_subcont {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  width: 300px;
+  height: 378px;
+  border-radius: 22px;
+  box-shadow: 8px 7px 153.1px 0px rgba(0, 0, 0, 0.25);
+  background: #FFF;
+  flex-shrink: 0;
+}
+
+/* ======================================== */
+#sec3 h1 {
+  color: #353A56;
+  font-size: 50px;
+  margin-top: 100px;
+}
+
+.sec3_topic h2 {
+  width: 200px;      
+  flex-shrink: 0;    
+  margin: 0;
+  color: #353A56;
+  font-family: 'Inter', sans-serif;
+  font-size: 24px;
+  font-style: bold;
+  font-weight: 3000;
+  line-height: normal;
+}
+
+.sec3_topic p {
+  flex: 1;           
+  color: #353A56;
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: normal;
+  text-align: left;
+  margin: 0;
+}
+#sec3_container {
+  margin-bottom: 150px;
+}
+
+.sec3_topic {
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 30px; /* space between h2 and p */
+  margin-left: 250px;
+  margin-right: 250px;
+  margin-bottom: 40px;
+}
+
+/* =========================================== */
+
+#sec4 {
+  height: 100vh;
+  width: auto;
+  background-color: #ffffff;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+#sec4_title h1 {
+  color: #353A56;
+  font-size: 50px;
+  margin-top: 100px;
+  text-align: center;
+}
+
+#sec4_title p {
+  color: #353A56;
+  font-family: 'Inter', sans-serif;
+  font-size: 18px;
+  font-style: italic;
+  font-weight: 300;
+  line-height: normal;
+  text-align: center;
+  margin: 0;
+}
+
+#sec4_container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 30px;
+  margin-bottom: 350px;
+}
+
+#sec4_container img {
+  height: 125px;
+  width: auto;
+  margin-bottom: 10px;
+}
+
+.sec4_subcont {
+  width: 175px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.sec4_subcont h2 {
+  color: #353A56;
+  font-size: 20px;
+  text-align: center;
+  margin: 0;
+}
+
+.sec4_subcont p {
+  color: #353A56;
+  font-size: 16px;
+  text-align: center;
+  margin: 0;
+}
+#sec4_footer {
+  width: 100%;
+  align-items: center;
+  
+}
+#sec4_footer p {
+  text-align: center;
+  
+}
+hr {
+  border: none;
+  border-top: 1px solid #353A56;
+  width: 80%;
+  margin: auto;
+} 
