--- a/Arc_Ai/Arc_Ai/core/static/styles/styles.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/styles.css
@@ -1,542 +1,156 @@
 body {
-    background: linear-gradient(297deg, #E9F0F5 46.32%, #FFF 90.42%);
     margin: 0;
     padding: 0;
+    font-family: 'Inter', sans-serif;
 }
 
-/*================================================== ID's */
-
-                                            /* Header */
 #header {
-    background: #353A56;
-    width: 100%;
-    height: auto;
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    padding-top: 5px;
-    padding-bottom: 5px;
-    overflow: hidden;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    height: 70px;
+    width: 100vw;
+    background-color: #353A56;
+    margin: 0;
+    position: fixed;
+    z-index: 1000;
 }
-
-#header_nav {
-    display: flex;
-    gap: 20px;
-    margin-right: 5%;
-    margin-left: auto;
-}
-#header_nav a {
-    text-decoration: none;
-    color: white;
-    font-size: 20px;
-    font-family: 'Arial', sans-serif;
-    position: relative;
-}
-
-#header_nav a:visited {
-    color: white;
-}
-
-#header_nav a:hover {
-    color: lightgray;
-}
-
-#header_nav a.active {
-    color: lightgray;
-}
-
-#header_nav a::after {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: -5px;
-    width: 0;
-    height: 2px;
-    background-color: white;
-    transition: width 0.3s ease;
-}
-#header_nav a:hover::after {
-    width: 100%;
-}
-
-#header_nav a.active::after {
-    width: 100%;
-}
-
-#logo {
-    width: 150px;
-    height: auto;
-    margin-left: 100px;
-}
-#account_icn {
+#header img {
     width: 50px;
     height: auto;
-    margin-right: 30px;
+    margin: 0 20px 0 20px;
 }
 
-/* Sidebar */
 #sidebar {
-    background: #ffffff;
-    width: 70px;
+    width: 200px;
     height: 100vh;
+    padding: 10px 20px 10px 20px;
+    background-color: #ffffff;
     position: fixed;
+    left: 0;
+    z-index: 1001;
+    box-shadow: 2px 0px 18.1px 0px rgba(0, 0, 0, 0.25);
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    gap: 30px;
+}
+#logo  {
     display: flex;
     flex-direction: column;
     align-items: center;
-    box-shadow: 2px 0px 18.1px 0px rgba(0, 0, 0, 0.25);
-    transition: width 0.3s ease;
-    justify-content: flex-end;
-    z-index: 1000;
-    user-select: none;
+    margin: 0 auto 0 auto;
 }
 
-#sidebar.expanded {
+#logo img {
+    height: 50px;
+    width: 160px;
+}
+
+hr {
     width: 200px;
-    justify-content: flex-end;
-}
-
-#sidebar_content p {
-    font-size: 14px;
-    margin: 0; /* Remove unnecessary margins */
-    color: #000;
-    text-align: left; /* Align text to the left */
-    position: relative;
-    opacity: 0; /* Initially hidden */
-    transition: opacity 0.3s ease, color 0.3s ease; /* Smooth transition for visibility and color */
-    white-space: nowrap; /* Prevent text from wrapping */
-    font-family: 'Arial', sans-serif;
-}
-
-#sidebar_content.hidden {
-    display: none; /* Hide the sidebar content when collapsed */
-}
-
-#sidebar_content p {
-    opacity: 1; /* Show text when sidebar is expanded */
-    margin-bottom: 10px;
-    text-decoration: none;
-}
-
-#sidebar_content a {
-    text-decoration: none;
-    color: inherit;
-}
-
-#sidebar_content p:hover {
-    color: #353A56; /* Change text color on hover */
-}
-
-#sidebar_content p::after {
-    content: '';
-    position: absolute;
-    bottom: -2px;
-    left: 0;
-    width: 0;
     height: 1px;
-    background-color: #ccc; /* Light gray color for the line */
-    transition: width 0.3s ease;
+    background-color: #353A56;
+    border: none;
+    margin: 9px 0 10px 0;
 }
 
-#sidebar_content p:hover::after {
-    width: 100%; /* Underline effect on hover */
+#upload {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    background-color: #353A56;
+    padding: 10px;
+    border-radius: 10px;
 }
 
-/* Divider styling */
-.divider_sidebar {
-    width: 80%; /* Adjust width as needed */
-    height: 1px; /* Thin line */
-    background-color: #ccc; /* Light gray color for the line */
-    border: none; /* Remove default border */
-    margin: 10px auto; /* Add spacing and center the line */
+#upload img{
+    width: 20px;
+    height: auto;
 }
 
+#upload h1 {
+    color: #FFF;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    margin: 0;
+}
 
-/* Sidebar Icons Group */
-#sidebar_icns_grp {
+#sidebar_cont {
     display: flex;
     flex-direction: column;
     gap: 20px;
-    order: 2; /* Ensure it stays at the bottom */
-    margin-bottom: 20px; /* Adds spacing from the bottom */
 }
-
-#sidebar_icns_grp {
+#navigate {
     display: flex;
     flex-direction: column;
-    gap: 30px;
-    order: 2; /* Ensure it stays at the bottom */
-    margin-bottom: 20px; /* Adds spacing from the bottom */
-}
-
-.nav_item {
-    display: flex;
-    flex-direction: row; /* Align items in a row */
-    align-items: center; /* Vertically center the icon and text */
-    position: relative;
-    cursor: pointer;
-    gap: 10px; /* Add spacing between the icon and text */
-}
-
-.nav_item p {
-    font-size: 14px;
-    margin: 0; /* Remove unnecessary margins */
-    color: #000;
-    text-align: left; /* Align text to the left */
-    position: relative;
-    opacity: 0; /* Initially hidden */
-    transition: opacity 0.3s ease; /* Smooth transition for visibility */
-    white-space: nowrap; /* Prevent text from wrapping */
-    font-family: 'Arial', sans-serif;
-}
-
-#sidebar.expanded .nav_item p {
-    opacity: 1; /* Show text when sidebar is expanded */
-}
-
-.nav_item:hover p {
-    color: #353A56;
-}
-
-.nav_item p::after {
-    content: '';
-    position: absolute;
-    bottom: -2px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 0;
-    height: 1px;
-    background-color: #ccc;
-    transition: width 0.3s ease;
-}
-
-#sidebar.expanded .nav_item:hover p::after {
     width: 100%;
 }
-
-.sidebar_icns {
-    width: 35px;
-    cursor: pointer;
-}
-
-/* Notification Pop-Up */
-.notification_container h2 {
-    font-family: 'Arial', sans-serif;
+#navigate a,
+#settings a {
     color: #353A56;
-    margin-bottom: 10px;
-}
-
-#notification_popup {
-    position: fixed;
-    bottom: 20px;
-    left: calc(70px + 20px); /* Adjust based on the collapsed sidebar width */
-    width: 385px; /* Fixed width */
-    height: 447px; /* Fixed height */
-    background: white;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    padding: 20px;
-    border-radius: 10px;
-    z-index: 1000; /* Ensure it stays above other elements */
-    display: flex;
-    flex-direction: column;
-    overflow: hidden; /* Prevent content overflow */
-    transition: left 0.3s ease; /* Smooth transition when position changes */
-}
-
-#notification_popup.hidden {
-    display: none;
-}
-
-/* Notification List */
-#notification_popup ul{
-    list-style-type: none; /* Remove default list styling */
-    padding: 0; /* Remove default padding */
-    margin: 0; /* Remove default margin */
-}
-
-#notification_list::-webkit-scrollbar {
-    display: none; /* For Chrome, Safari, and newer Edge */
-}
-
-#notification_list {
-    flex: 1;
-    overflow-y: auto; /* Enable vertical scrolling if content overflows */
-    margin-top: 10px;
-    scrollbar-width: none; /* For Firefox */
-    -ms-overflow-style: none; /* For Internet Explorer and Edge */
-}
-
-#notification_list h2 {
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    display: block;
+    width: 200px; /* Set your desired width */
+    padding: 10px 100px 10px 10px;
+    border-radius: 6px;
+    text-decoration: none;
     font-size: 20px;
-    font-family: 'Arial', sans-serif;
-    color: #353A56;
-    margin-bottom: 10px;
+    box-sizing: border-box;
 }
-
-/* Notification Items */
-.notification_item {
-    display: flex;
-    flex-direction: column; /* Stack content vertically */
-    justify-content: flex-start;
-    align-items: flex-start;
-    padding: 10px 0;
-    border-bottom: 1px solid #ccc;
-    cursor: pointer;
-}
-
-.notification_item p {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
+#navigate a:hover,
+#settings a:hover {
+    transition: background-color 0.3s, color 0.3s;
+    background-color: #e0e0e0;
     color: #353A56;
 }
 
-.notification_item .short-description {
-    font-size: 14px;
-    color: #666;
-    margin-top: 5px;
-    margin-bottom: 2px;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis; /* Ensure text is truncated if it exceeds 40 characters */
-    max-width: 360px; /* Ensure it doesn't exceed the container width */
+#navigate h1,
+#settings h1 {
+    color: rgba(53, 58, 86, 0.59);
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
-
-.notification_item .posted-by {
-    font-size: 12px;
-    color: #888;
-    margin-bottom: 5px;
-}
-
-.notification_list ul{
-    list-style-type: none; /* Remove default list styling */
-    padding: 0; /* Remove default padding */
-    margin: 0; /* Remove default margin */
-}
-
-.title-and-date {
-    display: flex;
-    justify-content: space-between; /* Ensures the span stays at the end of the line */
-    align-items: center; /* Aligns them vertically */
-    width: 100%; /* Ensures the container spans the full width */
-    word-break: break-word; /* Allows long words in the p to wrap */
-}
-
-.notification_item span {
-    font-size: 14px;
-    font-family: 'Arial', sans-serif;
-    color: #353A56;
-}
-
-.notification_item:hover {
-    background-color: #f5f5f5;
-}
-
-
-/* Close Button */
-#close_notification_popup {
-    align-self: flex-end;
-    margin-top: 30px;
-    padding: 5px 10px;
-    font-size: 14px;
-    font-family: 'Arial', sans-serif;
-    color: white;
-    background-color: #353A56;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-}
-
-#close_notification_popup:hover {
-    background-color: #2c2f45;
-}
-
-
-/* When Sidebar is Expanded */
-#sidebar.expanded #notification_popup {
-    left: calc(200px + 20px); /* Adjust based on the expanded sidebar width */
-}
-
-#sidebar.expanded #detailed_notification {
-    left: calc(220px + 20px + 400px + 20px); /* Adjust based on the expanded sidebar width */
-}
-
-.hidden {
-    display: none; /* Hide the element when this class is applied */
-}
-
-/* Detailed Notification */
-#detailed_notification {
-    position: fixed;
-    bottom: 20px;
-    left: calc(90px + 20px + 400px + 20px); /* Default position */
-    width: 385px;
-    height: 447px;
-    background: white;
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-    padding: 20px;
-    border-radius: 10px;
-    transition: left 0.3s ease; /* Smooth transition when position changes */
-    z-index: 1000;
+#settings {
     display: flex;
     flex-direction: column;
 }
 
-.notification_date{
-    margin-top: -12px;
-    font-family: 'Arial', sans-serif;
+#logout {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    margin: 43vh auto 0 auto;
+    padding: 10px;
+    border: 1px solid #353A56;
+    border-radius: 10px;
+}
+#logout:hover {
+    background-color: #e0e0e0;
+    color: #FFF;
+    transition: background-color 0.3s, color 0.3s;
+}
+#logout img {
+    width: 20px;
+    height: auto;
+}
+#logout h1 {
     color: #353A56;
-    position: relative;
-}
-
-#notification_detail {
-    max-height: 280px; /* Limit the height to 300px */
-    overflow-y: auto; /* Enable vertical scrolling if content exceeds the height */
-    font-weight: 200;
-    line-height: normal;
-    font-family: 'Arial', sans-serif;
-    font-style: italic;
-    font-size: 14px;
-    color: #000000;
-    scrollbar-width: none; /* For Firefox */
-    margin: 0;
-}
-
-/* Hide scrollbar for Webkit browsers (Chrome, Safari, Edge) */
-#notification_detail::-webkit-scrollbar {
-    display: none; /* Hide the scrollbar */
-}
-
-.posted-by{
-    margin: 0;
-    font-family: 'Arial', sans-serif;
-    font-size: 14px;
-    color: #888;
-}
-
-#detailed_notification.hidden {
-    display: none;
-}
-
-/* Close Button */
-#close_detailed_notification {
-    align-self: flex-end;
-    align-items: end;
-    margin-top: 30px;
-    padding: 5px 10px;
-    font-size: 14px;
-    font-family: 'Arial', sans-serif;
-    color: white;
-    background-color: #353A56;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-}
-
-.respond-btn {
-    align-self: flex-end;
-    padding: 10px 20px;
-    font-size: 14px;
-    font-family: 'Arial', sans-serif;
-    color: white;
-    background-color: #353A56;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    position: absolute;
-    bottom: 20px;
-}
-
-.respond-btn:hover {
-    background-color: #2c2f45;
-}
-
-/* Dunno */
-#result {
-    font-size: 200px;
-}
-
-/*================================================== Classes */
-.text_white {
-    color: white;
-    font-size: 20px;
-    font-family: 'Inter', sans-serif;
-    text-align: center;
-}
-.text_black {
-    color: #000;
-    font-family: 'Inter', sans-serif;
     font-size: 20px;
     font-style: normal;
-    font-weight: 300;
+    font-weight: 500;
     line-height: normal;
+    margin: 0;
 }
-.sidebar_icns {
-    width: 35px;
-}
-
-.folders {
-    width: 257px;
-    height: 80px;
-    flex-shrink: 0;
-    border-radius: 7px;
-    background: #F9FBFC;
-    box-shadow: -1px 1px 3.2px 0px rgba(0, 0, 0, 0.25);
-}
-
-.margin-top {
-    margin-top: 5px;
-}
-/*================================================== Scrollables "Saved"*/
-
-#content h1, h2, h3, h4 {
-    margin-bottom: 20px;
-    margin-top: 20px;
-    text-align: left;
-    font-family: 'Inter', sans-serif;
-    color: #000;
-    font-style: normal;
-    font-weight: 200;
-    line-height: normal;
-    font-size: 2em;
-}
-
-/*================================================== Custom Scroll Bars*/
-
-/* Custom Scrollbar for Webkit Browsers (Chrome, Safari) */
-::-webkit-scrollbar {
-    width: 8px; /* Width of the scrollbar */
-    background-color: #f5f5f5; /* Background color of the scrollbar */
-}
-
-::-webkit-scrollbar-button {
-    display: none; /* Hides the up/down or left/right arrows */
-    width: 0;
-    height: 0;
-}
-
-::-webkit-scrollbar-track {
-    background: #f1f1f1; /* Background of the scrollbar track */
-    border-radius: 10px; /* Rounded corners for the track */
-}
-::-webkit-scrollbar-thumb {
-    background-color: #353A56; /* Color of the scrollbar thumb */
-    border-radius: 10px; /* Rounded corners for the scrollbar thumb */
-}
-
-::-webkit-scrollbar-thumb:hover {
-    background-color: #353A56; /* Color of the scrollbar thumb on hover */
-}
-
-/* Custom Scrollbar for Firefox */
-
-* {
-    scrollbar-width: thin; /* Width of the scrollbar */
-    scrollbar-color: #353A56 #f5f5f5; /* Color of the scrollbar thumb and background */
-}
-
-.scrollbar-button {
-    display: none;
-}
-/*================================================== Testing ID's*/
