--- a/Arc_Ai/Arc_Ai/core/templates/core/profilepage.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/profilepage.html
@@ -11,136 +11,83 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="header">
+        <img src="{% static 'Images/Account.png' %}" alt="Account">
+    </div>
     <div id="sidebar">
-        <div id="sidebar_content" class="hidden">
-            <p><a href="{% url 'core:profilepage' %}">Profile</a></p>
-            <p><a href="{% url 'core:home' %}">Home</a></p>
-            <p><a href="{% url 'core:organization' %}">Organization</a></p>
-            <p><a href="{% url 'core:saved' %}">Saved</a></p>
-            <p><a href="{% url 'core:email' %}">Email</a></p>
+        <div id="logo">
+            <img src="{% static 'Images/Logo_LandingPage.png' %}" alt="ARC.AI Logo">
+            <hr>
         </div>
-        <hr class="divider_sidebar"/>
-    
-        <div class="notification_container">
-          <!-- Notification Pop-Up -->
-          <div id="notification_popup" class="hidden">
-            <h2>Notifications</h2><button id="close_notification_popup" class="close-btn">&times;</button>
-            <div id="notification_list">
-                <ul>
-                    <li class="notification_item" data-detail="General meeting at 10:30 AM on January 3, 2024, will be held in the main conference room. All employees are expected to attend this important session where key company updates and strategic initiatives for the upcoming year will be discussed.">
-                        <p>Schedule Update <span>Yesterday</span></p>
-                        <p class="short-description">General meeting at 10:30AM on Jan 3, 202 General meeting at 10:30AM on Jan 3, 202</p>
-                        <p class="posted-by">- Imee Duterte</p>
-                        
-                    </li>
-                    <li class="notification_item" data-detail="Another meeting detail here.">
-                        <p>Schedule Update <span>Yesterday</span></p>
-                        <p class="short-description">Another meeting detail here General meeting at 10:30AM on Jan 3, 202 General meet</p>
-                        <p class="posted-by">- John Doe</p>
-                    </li>
-                    <li class="notification_item" data-detail="Another meeting detail here.">
-                        <p>Schedule Update <span>Yesterday</span></p>
-                        <p class="short-description">Another meeting detail here</p>
-                        <p class="posted-by">- Sarah Marcos</p>
-                    </li>
-                    <li class="notification_item" data-detail="Another meeting detail here.">
-                        <p>Schedule Update <span>Yesterday</span></p>
-                        <p class="short-description">Another meeting detail here</p>
-                        <p class="posted-by">- Ginno Arostique</p>
-                    </li>
-                    <li class="notification_item" data-detail="Another meeting detail here.">
-                        <p>Schedule Update <span>Yesterday</span></p>
-                        <p class="short-description">Another meeting detail here</p>
-                        <p class="posted-by">- Ginno Arostique</p>
-                    </li>
-                </ul>
+        <div id="upload">
+            <img src="{% static 'Images/PlusIcon.png' %}" alt="ARC.AI Logo">
+            <h1>Upload</h1>
+        </div>
+        <div id="sidebar_cont">
+            <div id="navigate">
+                <h1>Navigate</h1>
+                <a href="#sec4" class="{% if active_page == 'home' %}active{% endif %}">Home</a>
+                <a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a>
+                <a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Files</a>
+            </div>
+            <div id="settings">
+                <h1>Settings</h1>
+                <a href="#sec4" class="{% if active_page == 'home' %}active{% endif %}">Profile</a>
+                <a href="#sec4" class="{% if active_page == 'home' %}active{% endif %}">Notification</a>
             </div>
         </div>
-          <!-- Detailed Notification -->
-          <div id="detailed_notification" class="hidden">
-              <h2 id="notification_title">Schedule Update</h2><p class="notification_date">Yesterday, January 29, 2025</p>
-              <button id="close_detailed_notification" class="close-btn">&times;</button>
-              <p id="notification_detail"></p>
-              <p class="posted-by">- Imee Duterte, Team Head</p>
-              <button class="respond-btn">Respond</button>
-          </div>
-        </div>
-    
-        <div id="sidebar_icns_grp">
-            <div class="nav_item">
-                <img id="nav_icon" class="sidebar_icns" style="margin-bottom: -6px;" src="{% static 'Images/Navigation.png' %}" alt="Navigate">
-                <p id="navigation_paragraph">Navigate</p>
-            </div>
-            <div class="nav_item">
-                <img class="sidebar_icns" src="{% static 'Images/Notification.png' %}" alt="Notification">
-                <p id="notification_paragraph">Notification</p>
-            </div>
-            <div class="nav_item">
-                <img class="sidebar_icns" src="{% static 'Images/Settings.png' %}" alt="Settings">
-                <p>Settings</p>
-            </div>
+        <div id="logout">
+            <img src="{% static 'Images/Logout.png' %}" alt="">
+            <h1>Logout</h1>
         </div>
     </div>
-    
-        <div id="header">
-            <div>
-                <img id="logo" src="{% static 'Images/Logo.png' %}" alt="ARC.AI Logo">
-            </div>
-            <div id="header_nav" class="text_white">
-              <p><a href="{% url 'core:home' %}" class="{% if active_page == 'home' %}active{% endif %}">Home</a></p>
-              <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
-              <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
-              <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
-              <p><a href="{% url 'core:profilepage' %}" class="{% if active_page == 'email' %}active{% endif %}">Profile</a></p>
-              <button class="logout">Log out</button>
-            </div>
-        </div>
-        <div id="main-content">
-            <section class="MainProfile">
-                <img src="{% static 'Images/avatar.png' %}" alt="User avatar" class="Avatar"/>
-                <div class="userInfo">
-                    <h1 class="username">{{personal_information.name}}</h1>
-                    <h3 class="email">{{personal_information.email}}</h3>
-                    <h3 class="user-title">{{personal_information.user_title}}</h3>
-                </div>
-                <div class="setting-icon">
-                    <img src="{% static 'Images/file-icon.png' %}" alt="Settings Icon">
-                </div>
-            </section>
-        </div>
-        <section class="PersonalInformation">
-            <div class="header-with-line">
-                <h1 class="Title">Personal Information</h1>
-                <hr class="divider"/>
-            </div>
 
-            <div class="info-grid">
-                <div class="info">
-                    <span class="label">Email:</span>
-                    <span class="value">{{personal_information.email}}</span>
-                </div>
-                <div class="info">
-                    <span class="label">Address:</span>
-                    <span class="value">{{personal_information.address}}</span>
-                </div>
-                <div class="info">
-                    <span class="label">Contact Number:</span>
-                    <span class="value">{{personal_information.contact_number}}</span>
-                </div>
-                <div class="info">
-                    <span class="label">Age:</span>
-                    <span class="value">{{personal_information.age}}</span>
-                </div>
-                <div class="info">
-                    <span class="label">Birth Date:</span>
-                    <span class="value">{{personal_information.birth_date}}</span>
-                </div>
-                <div class="info">
-                    <span class="label">Gender:</span>
-                    <span class="value">{{personal_information.gender}}</span>
-                </div>
+    <div id="main-content">
+        <section class="MainProfile">
+            <img src="{% static 'Images/avatar.png' %}" alt="User avatar" class="Avatar"/>
+            <div class="userInfo">
+                <h1 class="username">{{personal_information.name}}</h1>
+                <h3 class="email">{{personal_information.email}}</h3>
+                <h3 class="user-title">{{personal_information.user_title}}</h3>
+            </div>
+            <div class="setting-icon">
+                <img src="{% static 'Images/file-icon.png' %}" alt="Settings Icon">
             </div>
         </section>
+    </div>
+    <section class="PersonalInformation">
+        <div class="header-with-line">
+            <h1 class="Title">Personal Information</h1>
+            <hr class="divider"/>
+        </div>
+
+        <div class="info-grid">
+            <div class="info">
+                <span class="label">Email:</span>
+                <span class="value">{{personal_information.email}}</span>
+            </div>
+            <div class="info">
+                <span class="label">Address:</span>
+                <span class="value">{{personal_information.address}}</span>
+            </div>
+            <div class="info">
+                <span class="label">Contact Number:</span>
+                <span class="value">{{personal_information.contact_number}}</span>
+            </div>
+            <div class="info">
+                <span class="label">Age:</span>
+                <span class="value">{{personal_information.age}}</span>
+            </div>
+            <div class="info">
+                <span class="label">Birth Date:</span>
+                <span class="value">{{personal_information.birth_date}}</span>
+            </div>
+            <div class="info">
+                <span class="label">Gender:</span>
+                <span class="value">{{personal_information.gender}}</span>
+            </div>
+        </div>
+    </section>
     <section class="ProjectHistory">
         <div class="header-with-line">
             <h1 class="Title">Project History</h1>
@@ -180,7 +127,6 @@
                 {% endfor %}
             </div>
         </div>
-
     </section>
     <section class="EmployeeAwards">
         <div class="header-with-line">
