--- a/Arc_Ai/Arc_Ai/core/templates/core/edit_user_profile.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/edit_user_profile.html
@@ -12,7 +12,7 @@
 <body>
     <div id="sidebar">
         <div id="sidebar_content" class="hidden">
-            <p><a href="{% url 'core:profilepage' %}">Profile</a></p>
+            <p><a href="{% url 'core:profilepage' request.user.pk %}">Profile</a></p>
             <p><a href="{% url 'core:home' %}">Home</a></p>
             <p><a href="{% url 'core:organization' %}">Organization</a></p>
             <p><a href="{% url 'core:saved' %}">Saved</a></p>
@@ -89,46 +89,49 @@
             <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
             <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
             <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
-            <p><a href="{% url 'core:profilepage' %}" class="{% if active_page == 'email' %}active{% endif %}">Profile</a></p>
+            <p><a href="{% url 'core:profilepage' request.user.pk  %}" class="{% if active_page == 'email' %}active{% endif %}">Profile</a></p>
         </div>
         <div>
             <img id="account_icn" src="{% static 'Images/Account.png' %}" alt="Account">
         </div>
     </div>
 
-    <form method="post" action="{% url 'core:edit_user_profile' %}" enctype="multipart/form-data">
+    <form method="post" action="{% url 'core:edit_user_profile' request.user.pk %}" enctype="multipart/form-data">
         {% csrf_token %}
+        <input type="hidden" name="user_pk" value="{{ user.pk }}">
         <div id="content">
             <div id="signin_form">
+
+                {% if signup_details %}
                 <h1 class="titles justify-center">Edit User Information</h1>
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" value="{{ personal_info.email }}" required>
+                    <input type="email" id="email" name="email" value="{{ user.email }}" required>
                 </div>
                 <div class="form-group">
                     <label for="first_name">First Name:</label>
-                    <input type="text" id="first_name" name="first_name" value="{{ personal_info.first_name }}" required>
+                    <input type="text" id="first_name" name="first_name" value="{{ signup_details.first_name }}" required>
                 </div>
                 <div class="form-group">
-                    <label for="middle_initial">Middle Initial:</label>
-                    <input type="text" id="middle_initial" name="middle_initial" value="{{ personal_info.middle_initial }}" required>
+                    <label for="middle_name">Middle Name:</label>
+                    <input type="text" id="middle_name" name="middle_name" value="{{ signup_details.middle_name }}" required>
                 </div>
                 <div class="form-group">
                     <label for="last_name">Last Name:</label>
-                    <input type="text" id="last_name" name="last_name" value="{{ personal_info.last_name }}" required>
+                    <input type="text" id="last_name" name="last_name" value="{{ signup_details.last_name }}" required>
                 </div>
                 <div class="form-group">
                     <label for="complete_address">Complete Address:</label>
-                    <input type="text" id="complete_address" name="complete_address" value="{{ personal_info.complete_address }}" required>
+                    <input type="text" id="complete_address" name="complete_address" value="{{ signup_details.complete_address }}" required>
                 </div>
                 <div class="form-group">
-                    <label for="contact_no">Contact No.:</label>
-                    <input type="number" id="contact_no" name="contact_no" value="{{ personal_info.contact_number }}" required>
+                    <label for="contact_number">Contact No.:</label>
+                    <input type="text" id="contact_number" name="contact_number" value="{{ signup_details.contact_number }}" required>
                 </div>
                 <div id="age-gender_container">
                     <div class="form-group">
                         <label for="age">Age:</label>
-                        <input type="number" id="age" name="age" value="{{ personal_info.age }}" required>
+                        <input type="number" id="age" name="age" value="{{ signup_details.age }}" required>
                     </div>
                     <div class="form-group" id="gender_container">
                         <label for="gender">Gender:</label>
@@ -158,10 +161,15 @@
                         </select>
                     </div>
                 </div>
+                <div class="adminedit-submit-row">
+                        <button class="adminedit-submit-btn" type="submit">Save</button>
+                    </div>
+
                 <div class="form-group">
                     <label for="profile_avatar">Profile Picture:</label>
                     <input type="file" id="profile_avatar" name="profile_avatar">
                 </div>
+                {% endif %}
             </div>
         </div>
     </form>
