--- a/Arc_Ai/Arc_Ai/core/templates/core/home.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/home.html
@@ -11,7 +11,7 @@
 <body>
 <div id="sidebar">
     <div id="sidebar_content" class="hidden">
-        <p><a href="{% url 'core:profilepage' %}">Profile</a></p>
+        <p><a href="{% url 'core:profilepage' request.user.pk %}">Profile</a></p>
         <p><a href="{% url 'core:home' %}">Home</a></p>
         <p><a href="{% url 'core:organization' %}">Organization</a></p>
         <p><a href="{% url 'core:saved' %}">Saved</a></p>
@@ -95,7 +95,7 @@
                 <p><a href="{% url 'core:organization' %}" class="{% if active_page == 'organization' %}active{% endif %}">Organization</a></p>
                 <p><a href="{% url 'core:saved' %}" class="{% if active_page == 'saved' %}active{% endif %}">Saved</a></p>
                 <p><a href="{% url 'core:email' %}" class="{% if active_page == 'email' %}active{% endif %}">Email</a></p>
-                <p><a href="{% url 'core:profilepage' %}" class="{% if active_page == 'profilepage' %}active{% endif %}">Profile</a></p>
+                <p><a href="{% url 'core:profilepage' request.user.pk %}" class="{% if active_page == 'profilepage' %}active{% endif %}">Profile</a></p>
             {% endif %}
 
             </div>
