--- a/Arc_Ai/Arc_Ai/core/templates/core/login.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/login.html
@@ -12,11 +12,11 @@
     <link rel="stylesheet" href="{% static 'styles/login.css' %}?v=1.0">
 </head>
 <body>
-      {% if user.is_authenticated %}
+      <!-- {% if user.is_authenticated %}
         <script>
             window.location.href = "{% url 'core:home' %}";
         </script>
-      {% endif %}
+      {% endif %} -->
     <div id="login_cntr">
         <div id="container">
             <div id="form_container">
