--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
@@ -136,7 +136,7 @@
                     {% endif %}
                 </div>
                 
-                <div class="folderss">
+                <div class="folders">
                     <div class="title-Folders">Folders</div>
                     {% if user_data.folders %}
                         {% for folder in user_data.folders %}
