--- a/Arc_Ai/Arc_Ai/core/templates/core/saved.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/saved.html
@@ -180,7 +180,7 @@
                                     </div>
                                     <div class="file-details">
                                         <a href="https://drive.google.com/file/d/{{ file.file_id }}/view" target="_blank" class="file-name">{{ file.name }}</a>
-                                        <span class="file-owner">{{ file.owner }}</span>
+                                        <span class="file-owner">{{ file.uploader_username }}</span>
                                         <span class="file-date">{{ file.date }}</span>
                                         <span class="file-size">{{ file.size }}</span>
                                     </div>
@@ -248,7 +248,7 @@
                 </div>
                 <div class="file-details">
                     <a href="https://drive.google.com/file/d/{{ file.file_id }}/view" target="_blank" class="file-name">{{ file.name }}</a>
-                    <span class="file-owner">{{ file.owner }}</span>
+                     <span class="file-owner">{{ file.uploader_username }}</span>
                     <span class="file-date">{{ file.date }}</span>
                     <span class="file-size">{{ file.size }}</span>
                 </div>
