--- a/Arc_Ai/Arc_Ai/core/templates/core/organization.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/organization.html
@@ -53,6 +53,8 @@
                 <hr class="divider"/>
             </div>
 
+            <a class="create_project" href="{% url 'core:create_project_details' %}">Create Project</a>
+
             {% if top_project %}
             <div class="continue-card">
                 <div>
